--- a/entrypage/mainpage/aboutpage/style.css
+++ b/entrypage/mainpage/aboutpage/style.css
@@ -308,6 +308,16 @@
     }
     .links a{
       padding:0 .5rem;
+      background-color: #181717;
+      color: #ffffff;
+      padding: 12px;
+      border-radius: 50%;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      transition: transform 0.2s ease;
+    }
+    .links a:hover {
+      transform: scale(1.1);
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);
     }
     .resume{
       width:fit-content;
